# mailify

./: .gitignore  Cargo.toml
src/: config.rs  csv.rs  email.rs  main.rs
